# Anubis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
anubis/: Anubis.cpp  Anubis.hpp  AnubisConfig.cpp  AnubisConfig.hpp  AnubisCvars.cpp  AnubisCvars.hpp  AnubisInfo.hpp.in  CMakeLists.txt  DllExports.cpp  DllExports.hpp  EngineExports.cpp  EngineExports.hpp  HookChains.hpp  Logger.cpp  Logger.hpp  Module.cpp  Module.hpp  Msg.cpp  Msg.hpp  Utils.cpp  Utils.hpp
anubis/engine/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  Cvar.cpp  Cvar.hpp  Edict.cpp  Edict.hpp  GameClient.cpp  GameClient.hpp  Hooks.cpp  Hooks.hpp  Library.cpp  Library.hpp  ReHooks.cpp  ReHooks.hpp  TraceResult.cpp  TraceResult.hpp
anubis/game/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  Hooks.cpp  Hooks.hpp  IEntityHolder.hpp  Library.cpp  Library.hpp  Rules.cpp  Rules.hpp
anubis/game/cstrike/: AnubisExports.cpp  AnubisExports.hpp  BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BasePlayerAmmo.cpp  BasePlayerAmmo.hpp  BasePlayerItem.cpp  BasePlayerItem.hpp  BasePlayerWeapon.cpp  BasePlayerWeapon.hpp  BaseToggle.hpp  CMakeLists.txt  EntitiesHooks.cpp  EntitiesHooks.hpp  EntityHolder.cpp  EntityHolder.hpp  Hooks.cpp  Hooks.hpp  ReGameHeaders.hpp  Rules.cpp  Rules.hpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp  ValveInterface.cpp
anubis/game/valve/: AnubisExports.cpp  AnubisExports.hpp  BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BasePlayerAmmo.cpp  BasePlayerAmmo.hpp  BasePlayerItem.cpp  BasePlayerItem.hpp  BasePlayerWeapon.cpp  BasePlayerWeapon.hpp  BaseToggle.hpp  CMakeLists.txt  Config.cpp  Config.hpp  EntitiesHooks.cpp  EntitiesHooks.hpp  EntityHolder.cpp  EntityHolder.hpp  Rules.cpp  Rules.hpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp
cmake/: BuildFMT.cmake  BuildFMTClang.cmake  BuildFMTGCC.cmake  BuildLLVM.cmake  BuildLLVM2.cmake  BuildYAML.cmake  BuildYAMLClang.cmake  BuildYAMLGCC.cmake  CompilerSetup.cmake
configs/: config.yaml  plugins.yaml
docs/: Doxyfile  Doxyfile_internal  custom.css  header.html  index_internal_placeholder.html  index_placeholder.html
docs/html/: Common_8hpp.html  Common_8hpp.js  Common_8hpp_source.html  IBaseAnimating_8hpp.html  IBaseAnimating_8hpp_source.html  IBaseDelay_8hpp.html  IBaseDelay_8hpp_source.html  IBaseEntity_8hpp.html  IBaseEntity_8hpp_source.html  IBaseMonster_8hpp.html  IBaseMonster_8hpp_source.html  IBasePlayer_8hpp.html  IBasePlayer_8hpp_source.html  (+206 more)
include/: DllExports.hpp  EngineExports.hpp  HookChains.hpp  MetaConfig.hpp  MetaCvars.hpp  Metamod.hpp  Utils.hpp
metamod/: CMakeLists.txt  DllExports.cpp  DllExports.hpp  EngineExports.cpp  EngineExports.hpp  HookChains.hpp  MetaConfig.cpp  MetaConfig.hpp  MetaCvars.cpp  Metamod.cpp  Metamod.hpp  Module.cpp  Module.hpp  Utils.cpp  Utils.hpp
metamod/engine/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  Cvar.cpp  Cvar.hpp  Edict.cpp  Edict.hpp  Engine.cpp  Engine.hpp  EntVars.cpp  EntVars.hpp  GameClient.cpp  GameClient.hpp  Hooks.cpp  Hooks.hpp  HudTextParams.hpp  Library.cpp  Library.hpp  ReHooks.cpp  ReHooks.hpp  TraceResult.cpp  TraceResult.hpp
metamod/game/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  EntitiesHooks.cpp  EntitiesHooks.hpp  Hooks.cpp  Hooks.hpp  IEntityHolder.hpp  Library.cpp  Library.hpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp  VFuncHelpers.hpp
metamod/game/cstrike/: BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BaseToggle.hpp  CMakeLists.txt  EntitiesHooks.cpp  EntitiesHooks.hpp  EntityHolder.cpp  MetaExports.cpp  MetaExports.hpp  ReGameHeaders.hpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp  ValveInterface.cpp
metamod/game/entities/: CMakeLists.txt  IEntityHolder.hpp  VFuncHelpers.hpp
metamod/game/entities/cstrike/: BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BaseToggle.hpp  CMakeLists.txt  EntitiesHooks.cpp  EntitiesHooks.hpp  EntityHolder.cpp  MetaExports.cpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp
metamod/game/entities/valve/: BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BaseToggle.hpp  CMakeLists.txt  EntitiesHooks.cpp  EntitiesHooks.hpp  EntityHolder.cpp  EntityHolder.hpp  MetaExports.cpp  MetaExports.hpp  VFuncCallbacks.cpp
metamod/game/valve/: BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseMonster.hpp  BasePlayer.cpp  BasePlayer.hpp  BaseToggle.hpp  CMakeLists.txt  EntitiesHooks.cpp  EntitiesHooks.hpp  EntityHolder.cpp  EntityHolder.hpp  MetaExports.cpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp
metamod/gamelib/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  EntitiesHooks.cpp  EntitiesHooks.hpp  GameLib.cpp  GameLib.hpp  Hooks.cpp  Hooks.hpp  VFuncCallbacks.cpp  VFuncCallbacks.hpp  VFuncHelpers.hpp
metamod/gamelib/entities/cstrike/: BaseAnimating.hpp  BaseDelay.hpp  BaseEntity.cpp  BaseEntity.hpp  BasePlayer.cpp  BasePlayer.hpp  CMakeLists.txt
metamod/gamelib/entities/valve/: BaseAnimating.hpp  BaseEntity.cpp  BaseEntity.hpp  BasePlayer.cpp  BasePlayer.hpp  CMakeLists.txt
public/: Common.hpp  IAnubis.hpp  IHelpers.hpp  IHookChains.hpp  ILogger.hpp  IMetamod.hpp  IMsg.hpp  IPlugin.hpp  observer_ptr.hpp
src/: CMakeLists.txt  DllExports.cpp  EngineExports.cpp  MetaConfig.cpp  MetaCvars.cpp  MetaInfo.hpp.in  Metamod.cpp  Module.cpp  Utils.cpp
src/engine/: CMakeLists.txt  Callbacks.cpp  Edict.cpp  Engine.cpp  EntVars.cpp  Funcs.cpp  Globals.cpp  Hooks.cpp  ReFuncs.cpp  TraceResult.cpp  ValveInterface.cpp
src/entities/cstrike/: BaseEntity.cpp  BasePlayer.cpp  CMakeLists.txt
src/entities/valve/: BaseEntity.cpp  BasePlayer.cpp  CMakeLists.txt
src/gamelib/: CMakeLists.txt  Callbacks.cpp  Funcs.cpp  GameLib.cpp  Hooks.cpp
src/gamelib/entities/cstrike/: BaseEntity.cpp  BasePlayer.cpp  CMakeLists.txt
src/gamelib/entities/valve/: BaseEntity.cpp  BasePlayer.cpp  CMakeLists.txt
(+178 files in other folders)
